<resources>
    <string name="app_name">ConLaySample</string>
    <string name="movie_tittle">Blade runner 2049</string>
    <string name="director_label">Director:</string>
    <string name="director">Denis Villeneuve</string>
    <string name="movie_short_description">Blade Runner 2049 is a 2017 American epic neo-noir science fiction film directed by Denis Villeneuve from a screenplay by Hampton Fancher and Michael Green, based on a story by Fancher.[10][11] A sequel to Blade Runner (1982), the film stars Ryan Gosling and Harrison Ford, with Ana de Armas, Sylvia Hoeks, Robin Wright, Mackenzie Davis, Dave Bautista, and Jared Leto in supporting roles. Ford and Edward James Olmos reprise their roles from the previous film as Rick Deckard and Gaff, respectively. Gosling plays K, a "blade runner" who uncovers a secret that threatens to destabilize society and the course of civilization.</string>
    <string name="actors_label">Actors</string>
    <string name="actor_1">Ryan Gosling</string>
    <string name="actor_2">Harrison Ford</string>
    <string name="actor_3">Anna de Armas</string>
    <string name="actor_4">Jared Leto</string>
    <string name="like">like</string>
    <string name="watch">watch</string>
    <string name="share">share</string>
</resources>
