<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/movie_banner"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:adjustViewBounds="true"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/content_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintGuide_begin="16dp"
            android:orientation="vertical"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/content_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintGuide_end="16dp"
            android:orientation="vertical"
            />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/section_title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:constraint_referenced_ids="director_label, director, title, poster"
            />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/movie_tittle"
            app:layout_constraintStart_toStartOf="@id/content_start"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@+id/poster"
            app:layout_constraintTop_toBottomOf="@id/banner"
            app:layout_constraintHorizontal_bias="0"
            app:layout_goneMarginEnd="16dp"
        />

        <ImageView
            android:id="@+id/poster"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@drawable/poster"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/banner"
            android:layout_marginEnd="16dp"
            />

        <TextView
            android:id="@+id/director_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/director_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintStart_toStartOf="@id/content_start"
            />

        <TextView
            android:id="@+id/director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constrainedWidth="true"
            app:layout_constraintBaseline_toBaselineOf="@+id/director_label"
            app:layout_constraintStart_toEndOf="@+id/director_label"
            app:layout_constraintEnd_toStartOf="@+id/poster"
            app:layout_constraintHorizontal_bias="0"
            tools:text="@string/director"
            />
        
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/title_section_bottom_barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="title, director, director_label, poster"
            />

        <TextView
            android:id="@+id/shortcut_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/movie_short_description"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@+id/title_section_bottom_barrier"
            />

        <TextView
            android:id="@+id/actors_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/actors_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@+id/shortcut_description"
            />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/actors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/actors_label"
            app:constraint_referenced_ids="actor_1, actor_2, actor_3, actor_4"
            app:flow_wrapMode="aligned"
            app:flow_firstHorizontalBias="0"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:flow_horizontalStyle="packed"
            app:flow_verticalStyle="packed"
            app:flow_horizontalGap="8dp"
            app:flow_verticalGap="8dp"
            />

        <TextView
            android:id="@+id/actor_1"
            style="@style/Actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actor_1"
            />

        <TextView
            android:id="@+id/actor_2"
            style="@style/Actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actor_2"
            />

        <TextView
            android:id="@+id/actor_3"
            style="@style/Actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actor_3"
            />

        <TextView
            android:id="@+id/actor_4"
            style="@style/Actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actor_4"
            />

        <Button
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/like"
            app:layout_goneMarginEnd="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/watch"
            app:layout_constraintTop_toBottomOf="@+id/actors"
            />

        <Button
            android:id="@+id/watch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/watch"
            app:layout_goneMarginEnd="0dp"
            app:layout_constraintStart_toEndOf="@+id/like"
            app:layout_constraintEnd_toStartOf="@+id/share"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/actors"
            />

        <Button
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/share"
            app:layout_goneMarginEnd="0dp"
            app:layout_constraintStart_toEndOf="@+id/watch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actors"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>